--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.2.9",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.0.4",
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue": "^2.6.12",
+        "vue-input-mask": "^0.0.11",
+        "vue-select": "^3.11.2",
+        "vue-tailwind": "^2.1.7",
+        "vuex": "^3.6.2"
     }
 }
